--- a/Weather_App/index.html
+++ b/Weather_App/index.html
@@ -3,9 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CalculatorApp</title>
+  <link rel="stylesheet" href="style.css">
+  <title>weather app</title>
 </head>
 <body>
+
+  <div class=" app">
+    <div class="search">
+        <input type="text" spellcheck="true" placeholder="add place">
+        <img src="images/search.png" alt="search-btn">
+    </div>
+    <div>
+      <img src="images/rain.png" alt="img">
+      <h1>22°C</h1>
+      <h2>new York</h2>
+      <div class="details">
+        <div>
+          <img src="images/humidity.png" alt="img">
+          <div>
+            <p class="humidity">50%</p>
+            <p>humidity</p>
+          </div>
+        </div>
+        <div>
+          <img src="images/wind.png" alt="img">
+          <div>
+            <p class="wind">15 km/h</p>
+            <p>wind speed</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
