--- a/Basics/Notes_app/index.html
+++ b/Basics/Notes_app/index.html
@@ -7,15 +7,18 @@
     <title>Notes</title>
 </head>
 <body>
-    <div class="container">
-        <h1><img src="images/notes.png" alt="img">
-         notes</h1>
-        <button><img src="images/edit.png" alt="img"> create notes</button>
+    <div class="notes-app">
+        <div class="create-notes">
+        <img src="images/notes.png" alt="img">
+        <button class="create-note">Click to Add Notes</button>
+        </div>
+    <div class="notes-container">
+        <!-- <p contenteditable="true" class="note">
+            <img class="img" src="images/delete.png" alt="img">
+        </p> -->
     </div>
-    <div class="notes">
-        <p contenteditable="true" >
-            <img src="images/delete.png" alt="img">
-        </p>
     </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
