smart notes appp

--- a/mid/smartNotesApp/index.html
+++ b/mid/smartNotesApp/index.html
@@ -7,6 +7,17 @@
     <title>smartNoteApp</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="create-notes">
+            <img src="images/icon.jpg" alt="img">
+            <button>new Note</button>
+        </div>
+        <div class="notes-list">
+            <div contenteditable="true" class="note">
+                <i>notes</i>  
+                <img src="images/delete.png" alt="img">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
