--- a/mid/smartNotesApp/index.html
+++ b/mid/smartNotesApp/index.html
@@ -10,14 +10,16 @@
     <div class="container">
         <div class="create-notes">
             <img src="images/icon.jpg" alt="img">
-            <button>new Note</button>
+            <button class="new-note">new Note</button>
         </div>
         <div class="notes-list">
-            <div contenteditable="true" class="note">
+            <!-- <div contenteditable="true" class="note">
                 <i>notes</i>  
                 <img src="images/delete.png" alt="img">
-            </div>
+            </div> -->
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
